--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,9 @@
 	<div class="wrapper" style="background-image: url(images/bg.jpg);">
 		<div class="container">
 			<header class="header">
-				<img class="header__logo" src="images/logo.png" alt="logo">
+				<a class="header__logo" href="#">
+					<img src="images/logo.png" alt="logo">
+				</a>
 				<nav class="header__menu">
 					<ul>
 						<li><a href="#">История</a></li>
